--- a/Assignment # 15/index.html
+++ b/Assignment # 15/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <script src="./index.js"></script>
-    <title>Assignement # 14</title>
+    <title>Assignement # 15</title>
 </head>
 <body>
     <h1>Muhammad Tariq Assignment # 14</h1>
-    <h2>Use of Array in JavaScript.</h2>
+    <h2>Eliminating and adding array elements.</h2>
 
    </body>
 </html> 
