--- a/Assignment # 26/index.html
+++ b/Assignment # 26/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <script src="./index.js"></script>
-    <title>Assignement # 23</title>
+    <title>Assignement # 26</title>
 </head>
 <body>
-    <h1>Muhammad Tariq Assignment # 23</h1>
-    <h2>Conditional Tests.</h2>
+    <h1>Muhammad Tariq Assignment # 26</h1>
+    <h2>if else statements.</h2>
 
    </body>
 </html> 
