Working on Assignment # 37
Currently in class. I will continue later.

--- a/Assignment # 28/index.html
+++ b/Assignment # 28/index.html
@@ -7,6 +7,8 @@
 <body>
     <h1>Muhammad Tariq Assignment # 28</h1>
     <h2>Nested if else statements.</h2>
-
+<script>
+    console.log("age");
+</script>
    </body>
 </html> 
